[gd_scene load_steps=3 format=3 uid="uid://c6go4vvijagqh"]

[ext_resource type="Script" uid="uid://ba4qjq7fsnnia" path="res://addons/hyh.digression/editor/nodes/EditorCommentNode.gd" id="1_fx2a8"]
[ext_resource type="Theme" uid="uid://1cbvg04l0616" path="res://addons/hyh.digression/editor/nodes/styles/node_theme.tres" id="1_pci51"]

[node name="EditorCommentNode" type="GraphNode"]
custom_minimum_size = Vector2(200, 100)
offset_right = 698.0
offset_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_pci51")
theme_type_variation = &"CommentGraphNode"
resizable = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
script = ExtResource("1_fx2a8")

[node name="MC" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="CommentEdit" type="TextEdit" parent="MC"]
layout_mode = 2
theme_type_variation = &"CommentEdit"
placeholder_text = "Enter your comment..."
wrap_mode = 1
scroll_fit_content_height = true

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="node_deselected" from="." to="." method="_on_node_deselected"]
[connection signal="node_selected" from="." to="." method="_on_node_selected"]
[connection signal="resize_request" from="." to="." method="_on_resize_request"]
[connection signal="focus_entered" from="MC/CommentEdit" to="." method="_on_comment_edit_focus_entered"]
[connection signal="focus_exited" from="MC/CommentEdit" to="." method="_on_comment_edit_focus_exited"]
[connection signal="text_changed" from="MC/CommentEdit" to="." method="_on_comment_edit_text_changed"]
